code/java/BestExecutionAnalyticsforSmarterTradingBEAST/v2/docs/MultiDayBenchmarks.md


# MultiDayBenchmarks

MultiDay Benchmark object

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**tMinus5OpenPrice** | **Double** | tMinus5OpenPrice |  [optional]
**tMinus4ClosePerfBps** | **Double** | tMinus4ClosePerfBps |  [optional]
**tMinus3ClosePerfBps** | **Double** | tMinus3ClosePerfBps |  [optional]
**tMinus2OpenPrice** | **Double** | tMinus2OpenPrice |  [optional]
**tPlus3OpenPrice** | **Double** | tPlus3OpenPrice |  [optional]
**tPlus1DateId** | **String** | tPlus1DateId |  [optional]
**tPlus5ClosePrice** | **Double** | tPlus5ClosePrice |  [optional]
**tMinus2ClosePerfBps** | **Double** | tMinus2ClosePerfBps |  [optional]
**tMinus1ClosePerfBps** | **Double** | tMinus1ClosePerfBps |  [optional]
**tMinus4DateId** | **String** | tMinus4DateId |  [optional]
**tDateId** | **String** | tDateId |  [optional]
**tMinus3ClosePrice** | **Double** | tMinus3ClosePrice |  [optional]
**tMinus3OpenPerfBps** | **Double** | tMinus3OpenPerfBps |  [optional]
**tPlus1ClosePrice** | **Double** | tPlus1ClosePrice |  [optional]
**tOpenPrice** | **Double** | tOpenPrice |  [optional]
**tPlus5OpenPerfBps** | **Double** | tPlus5OpenPerfBps |  [optional]
**tMinus1DateId** | **String** | tMinus1DateId |  [optional]
**tMinus5ClosePrice** | **Double** | tMinus5ClosePrice |  [optional]
**tPlus2DateId** | **String** | tPlus2DateId |  [optional]
**tPlus2ClosePrice** | **Double** | tPlus2ClosePrice |  [optional]
**tMinus3DateId** | **String** | tMinus3DateId |  [optional]
**tMinus2OpenPerfBps** | **Double** | tMinus2OpenPerfBps |  [optional]
**tPlus5DateId** | **String** | tPlus5DateId |  [optional]
**tPlus2OpenPrice** | **Double** | tPlus2OpenPrice |  [optional]
**tMinus3OpenPrice** | **Double** | tMinus3OpenPrice |  [optional]
**tMinus5ClosePerfBps** | **Double** | tMinus5ClosePerfBps |  [optional]
**tMinus2ClosePrice** | **Double** | tMinus2ClosePrice |  [optional]
**tClosePerfBps** | **Double** | tClosePerfBps |  [optional]
**tPlus3ClosePrice** | **Double** | tPlus3ClosePrice |  [optional]
**tMinus1OpenPerfBps** | **Double** | tMinus1OpenPerfBps |  [optional]
**tOpenPerfBps** | **Double** | tOpenPerfBps |  [optional]
**tPlus4OpenPerfBps** | **Double** | tPlus4OpenPerfBps |  [optional]
**tMinus4ClosePrice** | **Double** | tMinus4ClosePrice |  [optional]
**tMinus4OpenPerfBps** | **Double** | tMinus4OpenPerfBps |  [optional]
**tMinus1ClosePrice** | **Double** | tMinus1ClosePrice |  [optional]
**tPlus1ClosePerfBps** | **Double** | tPlus1ClosePerfBps |  [optional]
**tPlus1OpenPrice** | **Double** | tPlus1OpenPrice |  [optional]
**tPlus3DateId** | **String** | tPlus3DateId |  [optional]
**tMinus4OpenPrice** | **Double** | tMinus4OpenPrice |  [optional]
**tPlus4OpenPrice** | **Double** | tPlus4OpenPrice |  [optional]
**tPlus1OpenPerfBps** | **Double** | tPlus1OpenPerfBps |  [optional]
**tPlus5ClosePerfBps** | **Double** | tPlus5ClosePerfBps |  [optional]
**tPlus4ClosePerfBps** | **Double** | tPlus4ClosePerfBps |  [optional]
**tPlus2ClosePerfBps** | **Double** | tPlus2ClosePerfBps |  [optional]
**tMinus1OpenPrice** | **Double** | tMinus1OpenPrice |  [optional]
**tPlus3ClosePerfBps** | **Double** | tPlus3ClosePerfBps |  [optional]
**tPlus4ClosePrice** | **Double** | tPlus4ClosePrice |  [optional]
**tPlus2OpenPerfBps** | **Double** | tPlus2OpenPerfBps |  [optional]
**tPlus4DateId** | **String** | tPlus4DateId |  [optional]
**tPlus5OpenPrice** | **Double** | tPlus5OpenPrice |  [optional]
**tClosePrice** | **Double** | tClosePrice |  [optional]
**tMinus5DateId** | **String** | tMinus5DateId |  [optional]
**tMinus2DateId** | **String** | tMinus2DateId |  [optional]
**tMinus5OpenPerfBps** | **Double** | tMinus5OpenPerfBps |  [optional]
**tPlus3OpenPerfBps** | **Double** | tPlus3OpenPerfBps |  [optional]


## Implemented Interfaces

* Serializable


